# glue-erd

./: LICENSE  Pipfile  README.md  glue_erd-1.0.0-py3-none-any.whl  pyproject.toml
src/: glue_erd.py
