[tool.poetry]
name = "glue-erd"
version = "1.0.0"
description = "create erd for AWS Glue DataCatalog"
authors = ["dokeita"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
boto3 = "^1.26.126"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glueerd = 'glue_erd:main'